force-app/main/default/objects/EOI__c/EOI__c.object-meta.xml
<CustomObject>
    <label>EOI</label>
    <nameField>
        <displayFormat>EOI-{000}</displayFormat>
        <label>EOI ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EOI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>