force-app/main/default/objects/EOI__c/fields/Amenity_Garden_View__c.field-meta.xml
<CustomField>
    <fullName>Amenity_Garden_View__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amenity Garden View</label>
    <type>Checkbox</type>
</CustomField>