force-app/main/default/objects/EOI__c/fields/Annual_Household_Income__c.field-meta.xml
<CustomField>
    <fullName>Annual_Household_Income__c</fullName>
    <label>Annual Household Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>₹5 - 10 Lakhs</fullName>
            </value>
            <value>
                <fullName>₹10 - 20 Lakhs</fullName>
            </value>
            <value>
                <fullName>₹20 - 30 Lakhs</fullName>
            </value>
            <value>
                <fullName>₹30 - 50 Lakhs</fullName>
            </value>
            <value>
                <fullName>₹50 Lakhs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>