force-app/main/default/objects/EOI__c/fields/Channel_Partner1__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner1__c</fullName>
    <formula>Related_Source__r.Channel_Partner1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Partner</label>
    <type>Text</type>
</CustomField>