force-app/main/default/objects/EOI__c/fields/Channel_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Name__c</fullName>
    <label>Channel Partner Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>