force-app/main/default/objects/EOI__c/fields/Channel_Partner_Names__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Names__c</fullName>
    <label>Channel Partner Names</label>
    <length>100</length>
    <type>Text</type>
</CustomField>