force-app/main/default/objects/EOI__c/fields/Channel_Partner_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Project_Name__c</fullName>
    <label>Channel Partner Project Name</label>
    <length>244</length>
    <type>Text</type>
</CustomField>