force-app/main/default/objects/EOI__c/fields/Communication_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Communication_Pincode__c</fullName>
    <label>Communication Pincode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>