force-app/main/default/objects/EOI__c/fields/Company_Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Firm_Name__c</fullName>
    <label>Company/Firm Name</label>
    <length>244</length>
    <type>Text</type>
</CustomField>