force-app/main/default/objects/EOI__c/fields/Consent_Place__c.field-meta.xml
<CustomField>
    <fullName>Consent_Place__c</fullName>
    <label>Consent Place</label>
    <length>100</length>
    <type>Text</type>
</CustomField>