force-app/main/default/objects/EOI__c/fields/Corporate_Activity_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Activity_Company_Name__c</fullName>
    <label>Corporate Activity Company Name</label>
    <length>122</length>
    <type>Text</type>
</CustomField>