force-app/main/default/objects/EOI__c/fields/Declaration_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Declaration Accepted</label>
    <type>Checkbox</type>
</CustomField>