force-app/main/default/objects/EOI__c/fields/DPDP_Consent_DateTime__c.field-meta.xml
<CustomField>
    <fullName>DPDP_Consent_DateTime__c</fullName>
    <label>DPDP Consent DateTime</label>
    <type>DateTime</type>
</CustomField>