force-app/main/default/objects/EOI__c/fields/DPDP_Consent_Given__c.field-meta.xml
<CustomField>
    <fullName>DPDP_Consent_Given__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DPDP Consent Given</label>
    <type>Checkbox</type>
</CustomField>