force-app/main/default/objects/EOI__c/fields/Friend_Relative_Self_Referrer_Name__c.field-meta.xml
<CustomField>
    <fullName>Friend_Relative_Self_Referrer_Name__c</fullName>
    <label>Friend/Relative/Self Referrer Name</label>
    <length>38</length>
    <type>Text</type>
</CustomField>