force-app/main/default/objects/EOI__c/fields/How_did_you_get_to_know_about_us__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_get_to_know_about_us__c</fullName>
    <label>How did you get to know about us?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Newspaper</fullName>
            </value>
            <value>
                <fullName>Hoarding</fullName>
            </value>
            <value>
                <fullName>Emailer</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Digital Ad</fullName>
            </value>
            <value>
                <fullName>Real Estate Portals</fullName>
            </value>
            <value>
                <fullName>Existing Customer referral</fullName>
            </value>
            <value>
                <fullName>Existing Customer(Loyalty)</fullName>
            </value>
            <value>
                <fullName>Events/Exhibitions</fullName>
            </value>
            <value>
                <fullName>Corporate Mailer</fullName>
            </value>
            <value>
                <fullName>Bank/HFI</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Social Media(FB, LinkedIn, X, YouTube, Instagram etc)</fullName>
            </value>
            <value>
                <fullName>Vendor Reference</fullName>
            </value>
            <value>
                <fullName>Employee Reference</fullName>
            </value>
            <value>
                <fullName>Society Activities</fullName>
            </value>
            <value>
                <fullName>Vendor Purchase</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>