force-app/main/default/objects/EOI__c/fields/Other_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Other_Purpose__c</fullName>
    <label>Other Purpose</label>
    <length>20</length>
    <type>Text</type>
</CustomField>