force-app/main/default/objects/EOI__c/fields/Others_Source__c.field-meta.xml
<CustomField>
    <fullName>Others_Source__c</fullName>
    <label>Others Source</label>
    <length>244</length>
    <type>Text</type>
</CustomField>