force-app/main/default/objects/EOI__c/fields/Passport_Number_PIO__c.field-meta.xml
<CustomField>
    <fullName>Passport_Number_PIO__c</fullName>
    <label>Passport Number/PIO</label>
    <length>20</length>
    <type>Text</type>
</CustomField>