force-app/main/default/objects/EOI__c/fields/Permanent_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Pincode__c</fullName>
    <label>Permanent Pincode</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>