force-app/main/default/objects/EOI__c/fields/Preference_1__c.field-meta.xml
<CustomField>
    <fullName>Preference_1__c</fullName>
    <label>Preference 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>