force-app/main/default/objects/EOI__c/fields/Preference_2__c.field-meta.xml
<CustomField>
    <fullName>Preference_2__c</fullName>
    <label>Preference 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>