force-app/main/default/objects/EOI__c/fields/Preference_3__c.field-meta.xml
<CustomField>
    <fullName>Preference_3__c</fullName>
    <label>Preference 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>