force-app/main/default/objects/EOI__c/fields/Preferred_Area__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Area__c</fullName>
    <label>Preferred Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Below 1100 Sq. Ft.</fullName>
            </value>
            <value>
                <fullName>~1200 Sq. Ft.</fullName>
            </value>
            <value>
                <fullName>~1500 Sq. Ft.</fullName>
            </value>
            <value>
                <fullName>~1800+ Sq. Ft.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>