force-app/main/default/objects/EOI__c/fields/Preferred_Facing__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Facing__c</fullName>
    <label>Preferred Facing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>North</fullName>
                <label>[Corner] North</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>