force-app/main/default/objects/EOI__c/fields/Preferred_PLC__c.field-meta.xml
<CustomField>
    <fullName>Preferred_PLC__c</fullName>
    <label>Preferred PLC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Classic</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Super Premium</fullName>
            </value>
            <value>
                <fullName>Ultra Premium</fullName>
            </value>
            <value>
                <fullName>Exclusive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>