force-app/main/default/objects/EOI__c/fields/Primary_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_No__c</fullName>
    <label>Primary Contact No</label>
    <type>Phone</type>
</CustomField>