force-app/main/default/objects/EOI__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <label>Project Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zuari Garden City - Plots</fullName>
            </value>
            <value>
                <fullName>Zuari Gangothri Tribhuja</fullName>
            </value>
            <value>
                <fullName>Zuari Upcoming Bengaluru</fullName>
            </value>
            <value>
                <fullName>Zuari Rain Forest</fullName>
            </value>
            <value>
                <fullName>Zuari Park View</fullName>
            </value>
            <value>
                <fullName>Zuari Envien Bioenergy</fullName>
            </value>
            <value>
                <fullName>Codename X</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>