force-app/main/default/objects/EOI__c/fields/Purpose_of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Purchase__c</fullName>
    <label>Purpose of Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Investment Purpose</fullName>
            </value>
            <value>
                <fullName>Purchasing for Self</fullName>
            </value>
            <value>
                <fullName>Moving to a better place</fullName>
            </value>
            <value>
                <fullName>Purchasing for Family</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>