force-app/main/default/objects/EOI__c/fields/Referrer_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Contact_No__c</fullName>
    <label>Contact No</label>
    <type>Phone</type>
</CustomField>