force-app/main/default/objects/EOI__c/fields/Referrer_Email__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Email__c</fullName>
    <label>Email ID</label>
    <type>Email</type>
</CustomField>