force-app/main/default/objects/EOI__c/fields/Referrer_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Project_Name__c</fullName>
    <label>Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>