force-app/main/default/objects/EOI__c/fields/Related_Source__c.field-meta.xml
<CustomField>
    <fullName>Related_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Source</label>
    <referenceTo>Related_Source__c</referenceTo>
    <relationshipLabel>EOI</relationshipLabel>
    <relationshipName>EOI</relationshipName>
    <type>Lookup</type>
</CustomField>