force-app/main/default/objects/EOI__c/fields/Road_Facing__c.field-meta.xml
<CustomField>
    <fullName>Road_Facing__c</fullName>
    <label>Road Facing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15m</fullName>
            </value>
            <value>
                <fullName>12m</fullName>
            </value>
            <value>
                <fullName>9m</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>