force-app/main/default/objects/EOI__c/fields/S_o_D_o__c.field-meta.xml
<CustomField>
    <fullName>S_o_D_o__c</fullName>
    <label>S/o,D/o</label>
    <length>244</length>
    <type>Text</type>
</CustomField>