force-app/main/default/objects/EOI__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Newspaper</fullName>
            </value>
            <value>
                <fullName>Hoarding</fullName>
            </value>
            <value>
                <fullName>Emailer</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Digital Ad</fullName>
            </value>
            <value>
                <fullName>Real Estate Portals</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Events/Exhibitions</fullName>
            </value>
            <value>
                <fullName>Corporate Mailer</fullName>
            </value>
            <value>
                <fullName>Bank/HFI</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Social Media (FB, LinkedIn, X, YouTube, Instagram, etc.)</fullName>
            </value>
            <value>
                <fullName>Society Activities</fullName>
            </value>
            <value>
                <fullName>Dealer Purchase</fullName>
            </value>
            <value>
                <fullName>Others (Please Specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>