force-app/main/default/objects/EOI__c/fields/Submission_Source__c.field-meta.xml
<CustomField>
    <fullName>Submission_Source__c</fullName>
    <label>Submission Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>