force-app/main/default/objects/EOI__c/fields/Unit_No__c.field-meta.xml
<CustomField>
    <fullName>Unit_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit No</label>
    <referenceTo>Plot__c</referenceTo>
    <relationshipLabel>EOI</relationshipLabel>
    <relationshipName>EOI</relationshipName>
    <type>Lookup</type>
</CustomField>