force-app/main/default/objects/EOI__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Channel_Partner__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Email__c</columns>
    <columns>Unit_No__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>